--- a/src/styles.css
+++ b/src/styles.css
@@ -1,1 +1,16 @@
 /* You can add global styles to this file, and also import other style files */
+body, html {
+    margin: 0;
+    padding: 0;
+    font-family: Verdana, Geneva, Tahoma, sans-serif;
+    background: #d1dae0;
+}
+
+.container{
+    margin: 0;
+    padding-right: 10%;
+    padding-left: 10%;
+    padding-top: 1%;
+    background: #d1dae0;
+}
+
